@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.4 2022/05/21 13:22:57 mef Exp $
+$NetBSD: distinfo,v 1.5 2022/05/21 13:29:45 mef Exp $
 
-BLAKE2s (R/bbmle_1.0.25.tar.gz) = a3f0d7b8888f1739aec02299f11db4406d35ae229b8ed1af788b8d9c838fe5e4
-SHA512 (R/bbmle_1.0.25.tar.gz) = 187a4e186abcacf2ebc0db5296e1fb20a80e71eba8ac4db14c620044cacaf67def83534b16960e6d89ea5361011c4a864e74edc1d64132c620b9f1c4c9e104b6
-Size (R/bbmle_1.0.25.tar.gz) = 524848 bytes
+BLAKE2s (R/bbmle_1.0.20.tar.gz) = 7331e09c6a06e17467a0b3a1ec6cdab0b2d418bbc3499a8e4ff2ab63c533c378
+SHA512 (R/bbmle_1.0.20.tar.gz) = 9ec6479123fed024885926fa0069bbb6664a8bdeb2fd5086f67589de90820fab1caec15793337fe06f880ea61a97abd62531fb49938067d23e4e9ad23eafe26e
+Size (R/bbmle_1.0.20.tar.gz) = 500688 bytes
